[gd_scene load_steps=21 format=3 uid="uid://dncgepmkc4jf4"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_37q80"]
[ext_resource type="Texture2D" uid="uid://bilydodkygq8x" path="res://Textures/Wall/character-shadow.png" id="2_fel6v"]
[ext_resource type="Texture2D" uid="uid://dehtsxm3k1twy" path="res://Textures/Player/player.png" id="2_tjd32"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Utility/hurt_box.tscn" id="3_gs51i"]
[ext_resource type="Texture2D" uid="uid://dx7xx6vfahxlq" path="res://Textures/GUI/exp_background.png" id="4_pbpj5"]
[ext_resource type="Texture2D" uid="uid://dlx33roiu0vlj" path="res://Textures/GUI/exp_progress.png" id="5_5ive2"]
[ext_resource type="PackedScene" uid="uid://dihcnrc6s7s5r" path="res://Utility/attack_manager.tscn" id="5_ijdha"]
[ext_resource type="FontFile" uid="uid://cb4e8g30xxp5u" path="res://Font/tenderness.otf" id="6_okx7u"]
[ext_resource type="FontFile" uid="uid://f502umyy2mu3" path="res://Font/BarlowCondensed-Medium.ttf" id="6_oy7lg"]
[ext_resource type="Texture2D" uid="uid://dhdewo2g6mb1d" path="res://Textures/GUI/Progress_Bar_Dark_small.png" id="7_qhkd8"]
[ext_resource type="Texture2D" uid="uid://bu66uf876p3jj" path="res://Textures/GUI/Progress_Bar_Light_Fill_small.png" id="8_k6kv4"]
[ext_resource type="AudioStream" uid="uid://b1pcocpuytvf1" path="res://Audio/SoundEffect/new/levelup.mp3" id="10_onxbm"]
[ext_resource type="AudioStream" uid="uid://c70xabd3ajwfi" path="res://Audio/SoundEffect/Victory.wav" id="10_rwm3p"]
[ext_resource type="AudioStream" uid="uid://ca6physj6mqei" path="res://Audio/SoundEffect/Lose.ogg" id="11_28kfi"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Utility/basic_button.tscn" id="12_i8esf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nffdp"]
radius = 4.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfi4i"]
size = Vector2(12, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_anwqc"]
radius = 370.951

[sub_resource type="CircleShape2D" id="CircleShape2D_p2554"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_6vwp8"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_37q80")

[node name="CharacterSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.03, 0.03)
texture = ExtResource("2_tjd32")
flip_h = true
hframes = 4

[node name="CharacterShadowSprite" type="Sprite2D" parent="CharacterSprite"]
modulate = Color(0.156863, 0.156863, 0.156863, 0.745098)
position = Vector2(-33.3333, 666.667)
scale = Vector2(2.625, 2.08333)
texture = ExtResource("2_fel6v")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 3)
shape = SubResource("CapsuleShape2D_nffdp")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_gs51i")]
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_yfi4i")

[node name="Attack" type="Node2D" parent="."]

[node name="AttackManager" parent="." instance=ExtResource("5_ijdha")]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_anwqc")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
scale = Vector2(1.75, 1.75)
shape = SubResource("CircleShape2D_p2554")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_6vwp8")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("4_pbpj5")
texture_progress = ExtResource("5_5ive2")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_oy7lg")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.807843)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 604.0
offset_bottom = 290.0
scale = Vector2(0.1, 0.1)
value = 50.0
texture_over = ExtResource("7_qhkd8")
texture_progress = ExtResource("8_k6kv4")
tint_progress = Color(1, 0.74902, 0.0784314, 1)

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUP" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_okx7u")
text = "Level Up !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 550.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("10_onxbm")
volume_db = -10.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 230.0
offset_top = -266.0
offset_right = 430.0
offset_bottom = -16.0

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 36.0
offset_right = 200.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("6_okx7u")
theme_override_font_sizes/font_size = 10
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_rwm3p")
volume_db = -10.0

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_28kfi")
volume_db = -10.0

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_i8esf")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_oy7lg")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[node name="BossPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_top = 49.0
offset_right = 656.0
offset_bottom = 345.0
scale = Vector2(0.972356, 1.00709)

[node name="Label" type="Label" parent="GUILayer/GUI/BossPanel"]
layout_mode = 0
offset_right = 659.0
offset_bottom = 295.0
text = "THE BIG BOSS APPROACHES!

FIGHT!!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OverlayLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]

[editable path="HurtBox"]
